# GGTune

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ggtune/: __init__.py  cli.py  config.py  orchestrator.py  tui.py
ggtune/models/: __init__.py  bench_result.py  hardware.py  hf_model.py  model_profile.py  profile.py  search_space.py
ggtune/modules/: advisor.py  benchmark_engine.py  compat_guard.py  env_manager.py  gguf_reader.py  hardware_scanner.py  hf_browser.py  model_tracker.py  process_manager.py  profile_storage.py  search_space_builder.py
ggtune/utils/: formatting.py  gpu.py  shell.py
tests/: test_advisor.py  test_bench_parser.py  test_benchmark_engine.py  test_compat_guard.py  test_gguf_reader.py  test_hardware_scanner.py  test_profile_storage.py  test_search_space.py
tests/fixtures/: bench_output_b5100.txt  bench_output_b5262.txt
